# IncreLux

./: Dockerfile  INFER-Exp.md  Makefile  README.md  clang-wrapper.sh  path_verify.py  setup.sh
KLEE/: build-klee.sh
KLEE/klee/: temp.txt
KLEE/klee/include/klee/: ExecutionState.h  Interpreter.h
KLEE/klee/lib/: CMakeLists.txt
KLEE/klee/lib/Core/: CMakeLists.txt  ExecutionState.cpp  Executor.cpp  Executor.h  Memory.cpp  Memory.h
KLEE/klee/lib/Encode/: Encode.cpp  Encode.h  KQuery2Z3.h  Symbolic.cpp  Symbolic.h
KLEE/klee/lib/Module/: IntrinsicCleaner.cpp  KModule.cpp
KLEE/klee/result/: main.py
KLEE/klee/runtime/: CMakeLists.txt  Makefile.cmake.bitcode.rules
KLEE/klee/tools/klee/: main.cpp
example/: cg-example.json
example/lll-v4.14/: .ERR_PTR.dot  .INIT_LIST_HEAD.dot  .IS_ERR.dot  .PTR_ERR.dot  .__amd_iommu_flush_page.dot  .__amd_iommu_flush_tlb.dot  .__attach_device.dot  .__clear_gcr3.dot  .__detach_device.dot  .__domain_flush_pages.dot  .__flush_pasid.dot  .__get_gcr3_pte.dot  .__get_order.dot  .__ilog2_u64.dot  .__iommu_queue_command_sync.dot  .__last_alias.dot  .__list_add.dot  .__list_del.dot  .__list_del_entry.dot  .__map_single.dot  .__roundup_pow_of_two.dot  .__set_gcr3.dot  .__unmap_single.dot  .acpihid_device_group.dot  .add_domain_to_list.dot  .alloc_coherent.dot  .alloc_dev_data.dot  .alloc_irq_index.dot  .alloc_pages.dot  .alloc_pte.dot  .amd_iommu_add_device.dot  .amd_iommu_apply_resv_region.dot  .amd_iommu_attach_device.dot  .amd_iommu_capable.dot  .amd_iommu_complete_ppr.dot  .amd_iommu_create_irq_domain.dot  .amd_iommu_detach_device.dot  .amd_iommu_device_group.dot  .amd_iommu_device_info.dot  .amd_iommu_dma_supported.dot  (+192 more)
example/lll-v4.14/ubi-ia-out/Summary/: _home_IncreLux_example_lll-v4.14_ioctl.bc_IS_ERR.sum  (+49 more)
example/lll-v4.15-rc1/: bitcode.list  ioctl.bc  object.bc
example/v4.14/: amd_iommu.bc
example/v4.15-rc1-v4.14/: bc+func.json  md.txt
example/v4.19-rc1/: amd_iommu.bc
example/v4.19-rc1-v4.14/: bc+func.json  md.txt
llvm/: build.sh
llvm/llvm-9.0.0.src/: .gitignore
src/: CMakeLists.txt
src/lib/: .QualifierCheck.cpp.swp  AAMap.cpp  Annotation.cpp  Annotation.h  CMakeLists.txt  CallGraph.cc  CallGraph.h  Common.h  Config.h  ConstraintCollect.cpp  FuncProcess.cpp  FunctionSummary.h  Helper.cpp  Helper.h  IOQualifierAnalysis.cpp  IOQualifierCheck.cpp  NodeFactory.cpp  NodeFactory.h  OOBQualifierAnalysis.cpp  OOBQualifierCheck.cpp  PointTo.cpp  PointTo.h  QualiInference.cpp  QualifierAnalysis.cpp  QualifierAnalysis.h  QualifierCheck.cpp  StructAnalyzer.cpp  StructAnalyzer.h  UBIAnalysis.cpp  UBIAnalysis.h  json11.cpp
(+3 files in other folders)
